FIXED CSS STYLE

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             nisi ut aliquip ex ea commodo consequat.
           </p>
         </div>
-        <form class="contact-form spacing-top">
+        <form class="contact-form">
           <div class="input-group">
             <input
               type="text"
